--- a/ja-po/wesnoth-dw/ja.po
+++ b/ja-po/wesnoth-dw/ja.po
@@ -1,14 +1,13 @@
 # Automatically generated, 2010.
-# IWAI, Masaharu <iwaim.sub@gmail.com>, 2010.
-#
+# IWAI Masaharu <iwaim.sub@gmail.com>, 2010.
 msgid ""
 msgstr ""
-"Project-Id-Version: wescamp-i 18n\n"
+"Project-Id-Version: Wesnoth - Dead Water\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-08-13 11:31+0200\n"
-"PO-Revision-Date: 2010-04-22 03:17+0900\n"
-"Last-Translator: IWAI, Masaharu <iwaim.sub@gmail.com>\n"
-"Language-Team: none <>\n"
+"PO-Revision-Date: 2010-08-19 22:54+0900\n"
+"Last-Translator: IWAI Masaharu <iwaim.sub@gmail.com>\n"
+"Language-Team: Japanese <iwaim.sub+wesnoth@gmail.com>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -180,7 +179,7 @@ msgid ""
 "son of Kai Laudiss, learned that he had become kai."
 msgstr ""
 "Kai Laudiss の軍勢は猛然と戦いました。討ち死にしたすべての戦士のために、5つの"
-"オークの団体を殺しました。王自身も無謀な諦めをもって戦いました。彼の敵は彼の"
+"オークの集団を殺しました。王自身も無謀な諦めをもって戦いました。彼の敵は彼の"
 "偉大なメイスの一撃で倒れていきます。オーク族は、罠に陥れたマーマンたちが想像"
 "以上に手強いことに気づき、マーマンの復讐に燃えた槍から逃れるために森林の中に"
 "逃げ込む予定でした。それは、王が意図した、オーク族が忘れることができない敗北"
@@ -208,7 +207,7 @@ msgstr ""
 #. [side]: type=Dark Sorcerer, id=Mal-Kevek
 #: data/campaigns/Dead_Water/scenarios/01_Invasion.cfg:80
 msgid "Undead Forces"
-msgstr "アンデッドの力"
+msgstr "アンデッド軍"
 
 #. [objective]: condition=win
 #: data/campaigns/Dead_Water/scenarios/01_Invasion.cfg:171
@@ -242,7 +241,7 @@ msgstr "Gwabbo"
 #: data/campaigns/Dead_Water/scenarios/01_Invasion.cfg:283
 msgid "Back, you fiend! You have not won...I will return to finish this."
 msgstr ""
-"退け、この悪魔め！お前たちが勝ったわけではない……私はこれを追えて戻るだけだ。"
+"退け、この悪魔め！お前たちが勝ったわけではない……私は任務を終えて戻るだけだ。"
 
 #. [message]: speaker=Gwabbo
 #: data/campaigns/Dead_Water/scenarios/01_Invasion.cfg:294
@@ -288,8 +287,8 @@ msgid ""
 "if you will permit — you reach the age now where a kai must learn battle "
 "skills."
 msgstr ""
-"Kai、一族を励まし、我々を導いてください。そして、認められたならば - 戦闘技術"
-"を習い、今、成年に達するのです。"
+"Kai、一族を励まし、我々を導いてください。その功績が認められたならば……戦闘技術"
+"を習い、一人前となるのです。"
 
 #. [message]: speaker=Cylanna
 #: data/campaigns/Dead_Water/scenarios/01_Invasion.cfg:319
@@ -298,8 +297,8 @@ msgid ""
 "but when war looms, a kai must lead. It is our way."
 msgstr ""
 "Gwabbo のいう通りです。あなたは戦わねばならない。私もできる限りあなたを助ける"
-"つもりです……しかし、大きな戦争になってしまえば、あなたが導かねばなりません。"
-"それが私たちの慣習です。"
+"つもりです……しかし、大きな戦争になってしまえば、あなた自身が導かねばなりませ"
+"ん。それが私たちの慣習です。"
 
 #. [message]: speaker=narrator
 #: data/campaigns/Dead_Water/scenarios/01_Invasion.cfg:324
@@ -321,9 +320,9 @@ msgid ""
 "He is raising our dead to fight against us! Even though they were your own "
 "citizens, Krellis, show no mercy. Destroy them if you can."
 msgstr ""
-"彼が私たちと戦うために 死んでしまった同胞を生き返らせています！Krellis、彼ら"
-"は生前はあなたの一般市民ではありましたが、今は慈悲もありません。できることな"
-"らば、彼らを破壊してあげてください。"
+"私たちと戦うために 死んでしまった同胞を生き返らせています！Krellis、彼らは生"
+"前はあなたの一般市民ではありましたが、今は慈悲もありません。できることなら"
+"ば、彼らを破壊してあげてください。"
 
 #. [message]: id=Mal-Kevek
 #: data/campaigns/Dead_Water/scenarios/01_Invasion.cfg:384
@@ -360,7 +359,7 @@ msgid ""
 "necromancer had spoken: 'Lord Ravanal'. He sent his swiftest scouts north "
 "and south along the coast to learn what they might about this Ravanal. The "
 "news they brought him was not good."
-msgstr ""
+msgstr "Kai Krellis はアンデッドが引き返してくることを心配していたので、アンデッドについてできる限りの情報を集めようとしました。唯一の手がかりは降霊術師が口にしていた 'Ravanal 卿' という名前のみでした。彼は、この Ravanal についての情報を得るために、一番俊敏な偵察隊を北と南の沿岸沿いに派遣しました。そして、不吉な知らせがもたらされました。"
 
 #. [part]
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:39
@@ -371,7 +370,7 @@ msgid ""
 "necromancers to attack the orcs, and even the elves, in a quest for undead "
 "soldiers of different races. It seemed that he also lusted for merfolk "
 "slaves. Krellis' scouts reported that more dark armies were heading north."
-msgstr ""
+msgstr "Mal-Ravanal と呼ばれている者は、人間族の偉大な魔術師が自身をリッチに変貌させたらしいとのことでした。彼は Wesnoth 王国の国境に攻撃を仕掛け、人間族からアンデッド軍団を作り上げていたのです。また、オーク族を攻撃するために、さらにはエルフ族、様々な種族のアンデッド兵士を得るために降霊術師たちを派遣していました。彼はマーフォークを奴隷にすることも渇望しているらしいのです。Krellis の偵察隊は、暗黒の軍団が北へ向かっていることを報告しました。"
 
 #. [part]
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:43
@@ -379,7 +378,7 @@ msgid ""
 "As the weeks went by, the veterans of the last battle helped train new "
 "recruits. Krellis' army did not yet match his father’s, but he now had many "
 "competent soldiers. As he had expected, their adversaries soon arrived."
-msgstr ""
+msgstr "数週間が経過しました。先の戦いを生き延びた歴戦の戦士たちは、若き戦士の訓練を手伝いました。Krellis の軍団は、まだまだ先王の軍団には及びません。しかし、今、彼には大勢の有能な兵士がいました。予測していたとおり、敵がすぐにやってきました。"
 
 #. [objective]: condition=win
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:83
@@ -391,7 +390,7 @@ msgstr "Kai Krellis をレベル 1 以上にして、地図の北西の角に移
 #. [objective]: condition=win
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:88
 msgid "(different bonus for each)"
-msgstr ""
+msgstr "（それぞれに異なるボーナスがあります）"
 
 #. [objective]: condition=win
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:88
@@ -417,9 +416,8 @@ msgstr "Mal-Ravanal 軍"
 #. [side]: type=Lich, id=Mal-Kevek
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:122
 #: data/campaigns/Dead_Water/scenarios/12_Revenge.cfg:134
-#, fuzzy
 msgid "Mal-Kevek"
-msgstr "Mal Kevek"
+msgstr "Mal-Kevek"
 
 #. [side]: type=Necromancer, id=Mel Daveth
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:146
@@ -432,29 +430,29 @@ msgstr "Mel Daveth"
 msgid ""
 "You may have ended my first life, but you have only made me more powerful in "
 "death. Now I will teach you a lesson!"
-msgstr ""
+msgstr "貴様が我の最初の人生を終わらせた。だが、我は死によってより強大な力を得た。次は貴様に教えてやろう！"
 
 #. [message]: speaker=Mel Daveth
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:282
 msgid "Leave some of them for me."
-msgstr ""
+msgstr "俺の分も残しておけ。"
 
 #. [message]: speaker=Dead Knight
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:288
 #: data/campaigns/Dead_Water/scenarios/12_Revenge.cfg:611
 msgid "Uhhh."
-msgstr ""
+msgstr "うぅぅ"
 
 #. [message]: speaker=Mel Daveth
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:293
 msgid "And him."
-msgstr ""
+msgstr "奴のも、だ。"
 
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:298
 msgid ""
 "We are surrounded. Look how many there are! How can we defeat them this time?"
-msgstr ""
+msgstr "我々は包囲されてしまった。どれだけいるんだよ！この危機をどのようにして打破できるんだ？"
 
 #. [message]: speaker=Cylanna
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:303
@@ -463,36 +461,36 @@ msgid ""
 "an island to the north. She and her priestesses are powerful. With their "
 "help we could probably defeat these enemies. Our task is to convince her to "
 "leave her enclave."
-msgstr ""
+msgstr "残念ながら私たちでは無理です。助けが必要です。私の年老いた師 Tyegëa　が北の島で教えています。彼女と彼女のpriestessesは強力です。彼女たちの助力があればおそらくはこれらの的を撃破できるでしょう。私たちは彼女を説得し、出廬を願うべきです。"
 
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:308
 msgid "You can do that, right?"
-msgstr ""
+msgstr "貴女はそれを実現できますよね？"
 
 #. [message]: speaker=Cylanna
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:313
 msgid "I am not sure that I can. However, you could."
-msgstr ""
+msgstr "わかりません。しかし、やるしかないのです。"
 
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:318
 msgid ""
 "Me? I've never even met Tyegëa. How can I convince her to help us if you "
 "cannot?"
-msgstr ""
+msgstr "私？私は Tyegëa にはまだ会ったことはありません。我々に助力いただくように彼女を説得することはできませんか？"
 
 #. [message]: speaker=Cylanna
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:323
 msgid ""
 "You will just have to trust me on this. She will listen to you. I will say "
 "no more on the matter."
-msgstr ""
+msgstr "あなたはこの私を信頼してください。彼女はあなたについて尋ねるでしょう。私はどんなに詳細なことでも言うつもりです。"
 
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:328
 msgid "Very well. How do we get there?"
-msgstr ""
+msgstr "結構だ。我々はどのようにしてそこに行けばいい？"
 
 #. [message]: speaker=Cylanna
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:333
@@ -501,7 +499,7 @@ msgid ""
 "small island to the west of Bilheld, which is over ocean to the west-"
 "southwest of Tirigaz. Everyone will have to go; it is now deadly perilous "
 "here, and the open ocean west of Tirigaz can be dangerous for small groups."
-msgstr ""
+msgstr "北の海岸に沿って進みます。そして、Bilheld 島の西に向かいます。Tirigaz の西南西の海にある Bilheld の西の小島に Tyegëa は住んでいます。皆で行かねばならないでしょう。今、この地は致命的に危険です。また Tirigaz の西にひらけた海は少人数では危険な場合もあります。"
 
 #. [message]: speaker=Gwabbo
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:358
@@ -509,7 +507,7 @@ msgid ""
 "Most of your citizens are not soldiers who will simply obey your orders. It "
 "will not be voiced aloud, but if you leave now, some of the people will "
 "think this mission is just an excuse to run away."
-msgstr ""
+msgstr "一般市民の大半は貴方の命令に単純に従う兵士ではありません。声には出さないでしょうが、今この地を離れると、この行動はただ単に逃げ出すための口実であると思う市民もいることでしょう。"
 
 #. [message]: speaker=Cylanna
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:364
@@ -517,35 +515,35 @@ msgid ""
 "However, I am afraid that not everyone will follow you on so perilous an "
 "adventure. First you must prove you are not afraid of danger. If you leave "
 "now, many will think the mission is but an excuse to flee."
-msgstr ""
+msgstr "残念ながら、とても危険な旅では、皆があなたに着いてくるとは限らないと心配します。まずは、あなたが危険を恐れている訳ではないことを立証せねばなりません。今のままでこの地を離れれば、多くの者は、この行動は逃亡のための口実だと考えてしまうでしょう。"
 
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:371
 msgid ""
 "I am not afraid! My people will see me fight the undead before we leave, "
 "even if defeating them all is impossible."
-msgstr ""
+msgstr "私は恐れているわけではない！たとえ打ち破ることが不可能だったとしても、この地を離れる前にアンデッドと私が戦うことを我が民に見せてやろう。"
 
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:377
 msgid ""
 "But will everyone follow me on so perilous an adventure? I am still a youth; "
 "it may be they will not trust me."
-msgstr ""
+msgstr "だが、皆はこのとても危険な旅に着いてきてくれるのだろうか？私はまだ若輩者だ。彼らはまだ私を信頼していない可能性がある。"
 
 #. [message]: speaker=Gwabbo
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:386
 msgid ""
 "They will follow. You proved your courage in our last battle. Your father, "
 "the Kai-that-was, would have been proud."
-msgstr ""
+msgstr "彼らは従うでしょう。貴方は先の戦いでその勇気を証明した。貴方の父、先王はそのことを誇りに思っていることでしょう。"
 
 #. [message]: speaker=Cylanna
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:392
 msgid ""
 "You have proven your courage in battle, as tradition required of a kai; they "
 "will follow you now."
-msgstr ""
+msgstr "王に必要とされる能力は、伝統では戦で自身の勇気を証明することになっています。そうすれば、彼らはあなたに従うことでしょう。"
 
 #. [message]: speaker=Mal-Kevek
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:414
@@ -567,7 +565,7 @@ msgstr "見てください！この角にコウモリが縮こまっています
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:474
 msgid "Well, kill it, and lets keep moving."
-msgstr ""
+msgstr "うーん、それは殺せ。まだ動き出すことになるだろうから。"
 
 #. [message]: speaker=second_unit
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:478
@@ -589,7 +587,7 @@ msgstr "ちょっとかわいいですね。"
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:491
 msgid "Very well then. I suppose we have our own bat."
-msgstr "よくわかった。そのコウモリを飼うことにする。"
+msgstr "わかった。そのコウモリを飼うことにする。"
 
 #. [message]: speaker=Cylanna
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:501
@@ -609,7 +607,7 @@ msgstr ""
 #. [message]: speaker=second_unit
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:541
 msgid "Look, this chest was in his tent. It is filled with gold!"
-msgstr ""
+msgstr "みろ、テントの中に金庫があるぞ。ゴールドで一杯だ。"
 
 #. [message]: speaker=narrator
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:553
@@ -619,7 +617,7 @@ msgstr "200ゴールド獲得。"
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:560
 msgid "It galls me to flee from our home, but we will return."
-msgstr ""
+msgstr "苛立たしいことだが、住み処から逃げるぞ。だが、我々は戻ってくる。"
 
 #. [message]: speaker=narrator
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:644
@@ -636,7 +634,7 @@ msgstr "力の指輪を拾った。"
 msgid ""
 "Killing these enemies was good, but there were many more on the way. It will "
 "take greater might than we have to defeat them."
-msgstr ""
+msgstr "敵を殺せてよかった。しかし、他にも選択肢は多くあったはずです。敵を打ち負かすことよりもより良い選択肢もあったことでしょう。"
 
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:679
@@ -774,12 +772,12 @@ msgstr ""
 #. [side]: id=Gilak, type=Saurian Ambusher, type=Saurian Ambusher, type=Saurian Flanker, type=Saurian Flanker
 #: data/campaigns/Dead_Water/scenarios/04_Slavers.cfg:132
 msgid "Gilak"
-msgstr ""
+msgstr "Gilak"
 
 #. [side]: id=Raxisz, type=Saurian Ambusher, type=Saurian Ambusher, type=Saurian Flanker, type=Saurian Flanker
 #: data/campaigns/Dead_Water/scenarios/04_Slavers.cfg:188
 msgid "Raxisz"
-msgstr ""
+msgstr "Raxisz"
 
 #. [side]: id=Aglizix, type=Saurian Ambusher, type=Saurian Flanker, type=Saurian Flanker, type=Saurian Flanker
 #: data/campaigns/Dead_Water/scenarios/04_Slavers.cfg:232
@@ -789,7 +787,7 @@ msgstr ""
 #. [side]: id=Aglizix, type=Saurian Ambusher, type=Saurian Flanker, type=Saurian Flanker, type=Saurian Flanker
 #: data/campaigns/Dead_Water/scenarios/04_Slavers.cfg:237
 msgid "Aglizix"
-msgstr ""
+msgstr "Aglizix"
 
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/04_Slavers.cfg:334
@@ -799,7 +797,7 @@ msgstr ""
 #. [unit]: type=Merman Brawler, id=Teeloa
 #: data/campaigns/Dead_Water/scenarios/04_Slavers.cfg:347
 msgid "Teelöa"
-msgstr ""
+msgstr "Teelöa"
 
 #. [message]: speaker=Teeloa
 #: data/campaigns/Dead_Water/scenarios/04_Slavers.cfg:361
@@ -941,7 +939,7 @@ msgstr ""
 #: data/campaigns/Dead_Water/scenarios/04_Slavers.cfg:577
 #: data/campaigns/Dead_Water/scenarios/11_Getting_Help.cfg:282
 msgid "You receive 100 gold."
-msgstr ""
+msgstr "100ゴールド獲得。"
 
 #. [message]: speaker=Friendly Bat
 #: data/campaigns/Dead_Water/scenarios/04_Slavers.cfg:599
@@ -977,7 +975,7 @@ msgstr ""
 #. [unit]: type=Drake Burner, id=Keshan
 #: data/campaigns/Dead_Water/scenarios/04_Slavers.cfg:637
 msgid "Keshan"
-msgstr ""
+msgstr "Keshan"
 
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/04_Slavers.cfg:651
@@ -1089,7 +1087,7 @@ msgstr ""
 #. [objective]: condition=win
 #: data/campaigns/Dead_Water/scenarios/05_Tirigaz.cfg:91
 msgid "Destroy all the undead"
-msgstr ""
+msgstr "アンデッドをすべて破壊する"
 
 #. [objective]: condition=win
 #: data/campaigns/Dead_Water/scenarios/05_Tirigaz.cfg:96
@@ -1099,7 +1097,7 @@ msgstr ""
 #. [objective]: condition=win
 #: data/campaigns/Dead_Water/scenarios/05_Tirigaz.cfg:96
 msgid "Also kill Marg-Tonz"
-msgstr ""
+msgstr "Marg-Tonz も殺す"
 
 #. [side]: id=Marg-Tonz, type=Orcish Sovereign
 #: data/campaigns/Dead_Water/scenarios/05_Tirigaz.cfg:130
@@ -1109,7 +1107,7 @@ msgstr ""
 #. [side]: id=Marg-Tonz, type=Orcish Sovereign
 #: data/campaigns/Dead_Water/scenarios/05_Tirigaz.cfg:134
 msgid "Marg-Tonz"
-msgstr ""
+msgstr "Marg-Tonz"
 
 #. [side]
 #: data/campaigns/Dead_Water/scenarios/05_Tirigaz.cfg:158
@@ -1273,7 +1271,7 @@ msgstr ""
 #. [side]: id=Growloff, type=Ranger
 #: data/campaigns/Dead_Water/scenarios/06_Uncharted_Islands.cfg:88
 msgid "Growloff"
-msgstr ""
+msgstr "Growloff"
 
 #. [unit]: type=Cuttle Fish, id=pet
 #: data/campaigns/Dead_Water/scenarios/06_Uncharted_Islands.cfg:163
@@ -1399,12 +1397,12 @@ msgstr ""
 #. [side]: id=Vlagnor, type=Drake Flameheart
 #: data/campaigns/Dead_Water/scenarios/07_Bilheld.cfg:83
 msgid "Drakes"
-msgstr ""
+msgstr "Drakes"
 
 #. [side]: id=Vlagnor, type=Drake Flameheart
 #: data/campaigns/Dead_Water/scenarios/07_Bilheld.cfg:88
 msgid "Vlagnor"
-msgstr ""
+msgstr "Vlagnor"
 
 #. [message]: speaker=Vlagnor
 #: data/campaigns/Dead_Water/scenarios/07_Bilheld.cfg:157
@@ -1486,7 +1484,7 @@ msgstr ""
 #: data/campaigns/Dead_Water/scenarios/08_Talking_to_Tyegea.cfg:83
 #: data/campaigns/Dead_Water/scenarios/11_Getting_Help.cfg:114
 msgid "Tyegëa"
-msgstr ""
+msgstr "Tyegëa"
 
 #. [objective]: condition=win
 #: data/campaigns/Dead_Water/scenarios/08_Talking_to_Tyegea.cfg:109
@@ -1778,7 +1776,7 @@ msgstr ""
 #: data/campaigns/Dead_Water/scenarios/10_The_Flaming_Sword.cfg:152
 #: data/campaigns/Dead_Water/scenarios/10_The_Flaming_Sword.cfg:154
 msgid "Caladon"
-msgstr ""
+msgstr "Caladon"
 
 #. [message]: speaker=Keshan
 #: data/campaigns/Dead_Water/scenarios/09_The_Mage.cfg:511
@@ -1891,7 +1889,7 @@ msgstr ""
 #: data/campaigns/Dead_Water/scenarios/10_The_Flaming_Sword.cfg:104
 #: data/campaigns/Dead_Water/scenarios/10_The_Flaming_Sword.cfg:106
 msgid "Mal-Govon"
-msgstr ""
+msgstr "Mal-Govon"
 
 #. [side]
 #: data/campaigns/Dead_Water/scenarios/10_The_Flaming_Sword.cfg:136
@@ -2016,7 +2014,7 @@ msgstr ""
 #. [unit]: type=Outlaw, id=Howyrth
 #: data/campaigns/Dead_Water/scenarios/10_The_Flaming_Sword.cfg:389
 msgid "Howyrth"
-msgstr ""
+msgstr "Howyrth"
 
 #. [message]: speaker=Howyrth
 #: data/campaigns/Dead_Water/scenarios/10_The_Flaming_Sword.cfg:403
@@ -2589,7 +2587,7 @@ msgid ""
 "situation, even mermen with no weapons or training can be dangerous."
 msgstr ""
 "ほとんどのマーマンは平和主義者ですが、住処を守るためには戦います。このような"
-"状況下では、武器も持たず訓練も積んでいないマーマンは危険と隣り合わせです。"
+"状況下では、武器も持たず訓練も積んでいないマーマンでさえ脅威となり得ます。"
 
 #. [unit_type]: id=Fire Guardian, race=monster
 #: data/campaigns/Dead_Water/units/Fire_Guardian.cfg:4
@@ -2734,7 +2732,7 @@ msgstr "炎の剣"
 #. [object]: id={ID}
 #: data/campaigns/Dead_Water/utils/items.cfg:92
 msgid "Ankh Necklace"
-msgstr ""
+msgstr "十字架の首飾り"
 
 #. [message]: speaker=$second_unit.id
 #: data/campaigns/Dead_Water/utils/items.cfg:196
@@ -2777,10 +2775,11 @@ msgstr ""
 msgid "I'll try on the ring."
 msgstr "指輪を試しにはめてみましょう。"
 
+# 意訳: 直訳なら「違いを感じます」か？
 #. [message]: speaker=unit
 #: data/campaigns/Dead_Water/utils/items.cfg:274
 msgid "I feel different, and all my weapons are lighter!"
-msgstr "違いを感じます。私のすべての武器が軽く感じます！"
+msgstr "力がみなぎります。すべての武器が軽く感じます！"
 
 #. [option]: speaker=unit
 #: data/campaigns/Dead_Water/utils/items.cfg:292
@@ -2791,7 +2790,7 @@ msgstr ""
 #. [option]: speaker=unit
 #: data/campaigns/Dead_Water/utils/items.cfg:301
 msgid "This thing makes me dizzy. Someone else can have it."
-msgstr "これが原因で眩暈がします。他の誰かがそれをはめることにします。"
+msgstr "これが原因で眩暈がします。これをはめるのは他の誰かに任せます。"
 
 #. [object]: id=power_ring2
 #: data/campaigns/Dead_Water/utils/items.cfg:320
@@ -2803,12 +2802,12 @@ msgstr "力の指輪"
 msgid ""
 "Killing these enemies was good, but there were many more on the way. I'm "
 "sure it is still unsafe here."
-msgstr ""
+msgstr "敵を殺せてよかった。しかし、他にも選択肢はいろいろあったはずです。ここはまだまだ危険です。"
 
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/utils/items.cfg:374
 msgid "I agree. I hate to leave our home, but we will return."
-msgstr ""
+msgstr "その通り。住み処から逃げ出さねばならないことは忌々しいが、必ず戻ってくるぞ。"
 
 #: data/campaigns/Dead_Water/utils/specials.cfg:4
 msgid " This unit is able stun its enemies, disrupting their zones of control."
@@ -2827,15 +2826,3 @@ msgid ""
 msgstr ""
 "この攻撃を受けたユニットはしばらく支配領域 (ZoC) の維持ができないぐらいに強力"
 "な攻撃です。この効果は攻撃を受けたユニットが次のターンになるまで継続します。"
-
-#~ msgid ""
-#~ "<span color='white'>Alternative objective:</span>\n"
-#~ "<span color='#00ff00'>Defeat all enemy leaders</span> <small>(different "
-#~ "bonus for each)</small>"
-#~ msgstr ""
-#~ "<span color='white'>別の目標:</span>\n"
-#~ "<span color='#00ff00'>敵のリーダーをすべて倒す</span> <small>（それぞれに"
-#~ "対し、異なるボーナスがあります）</small>"
-
-#~ msgid "Run out of Turns"
-#~ msgstr "時間切れ"
