--- a/ja-po/wesnoth-dw/ja.po
+++ b/ja-po/wesnoth-dw/ja.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: Wesnoth - Dead Water\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-09-15 19:36+0200\n"
-"PO-Revision-Date: 2010-09-18 02:58+0900\n"
+"PO-Revision-Date: 2010-09-27 06:31+0900\n"
 "Last-Translator: IWAI Masaharu <iwaim.sub@gmail.com>\n"
 "Language-Team: Japanese <iwaim.sub+wesnoth@gmail.com>\n"
 "MIME-Version: 1.0\n"
@@ -488,7 +488,7 @@ msgid ""
 msgstr ""
 "残念ながら私たちでは無理です。助けが必要です。私の年老いた師 Tyegëa　が北の島"
 "で教えています。彼女と彼女のpriestessesは強力です。彼女たちの助力があればおそ"
-"らくはこれらの的を撃破できるでしょう。私たちは彼女を説得し、出廬を願うべきで"
+"らくはこれらの敵を撃破できるでしょう。私たちは彼女を説得し、出廬を願うべきで"
 "す。"
 
 #. [message]: speaker=Kai Krellis
