--- a/ja-po/wesnoth-dw/ja.po
+++ b/ja-po/wesnoth-dw/ja.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: Wesnoth - Dead Water\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-09-15 19:36+0200\n"
-"PO-Revision-Date: 2010-09-27 06:31+0900\n"
+"PO-Revision-Date: 2010-10-03 15:31+0900\n"
 "Last-Translator: IWAI Masaharu <iwaim.sub@gmail.com>\n"
 "Language-Team: Japanese <iwaim.sub+wesnoth@gmail.com>\n"
 "MIME-Version: 1.0\n"
@@ -369,7 +369,12 @@ msgid ""
 "necromancer had spoken: “Lord Ravanal”. He sent his swiftest scouts north "
 "and south along the coast to learn what they might about this Ravanal. The "
 "news they brought him was not good."
-msgstr "Kai Krellis はアンデッドが引き返してくることを心配していたので、アンデッドについてできる限りの情報を集めようとしました。唯一の手がかりは降霊術師が口にしていた“Ravanal 卿”という名前のみでした。彼は、この Ravanal についての情報を得るために、一番俊敏な偵察隊を北と南の沿岸沿いに派遣しました。そして、不吉な知らせがもたらされました。"
+msgstr ""
+"Kai Krellis はアンデッドが引き返してくることを心配していたので、アンデッドに"
+"ついてできる限りの情報を集めようとしました。唯一の手がかりは降霊術師が口にし"
+"ていた“Ravanal 卿”という名前のみでした。彼は、この Ravanal についての情報を得"
+"るために、一番俊敏な偵察隊を北と南の沿岸沿いに派遣しました。そして、不吉な知"
+"らせがもたらされました。"
 
 #. [part]
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:39
@@ -488,7 +493,7 @@ msgid ""
 msgstr ""
 "残念ながら私たちでは無理です。助けが必要です。私の年老いた師 Tyegëa　が北の島"
 "で教えています。彼女と彼女のpriestessesは強力です。彼女たちの助力があればおそ"
-"らくはこれらの敵を撃破できるでしょう。私たちは彼女を説得し、出廬を願うべきで"
+"らくはこれらの敵を撃破できるでしょう。私たちは彼女を説得し、出廬を請うべきで"
 "す。"
 
 #. [message]: speaker=Kai Krellis
@@ -516,8 +521,8 @@ msgid ""
 "You will just have to trust me on this. She will listen to you. I will say "
 "no more on the matter."
 msgstr ""
-"あなたはこの私を信頼してください。彼女はあなたについて尋ねるでしょう。私はど"
-"んなに詳細なことでも言うつもりです。"
+"あなたはこの私を信頼してください。彼女はあなたについて尋ねることでしょう。私"
+"は詳細なことまで彼女に話すつもりです。"
 
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:328
@@ -532,10 +537,10 @@ msgid ""
 "southwest of Tirigaz. Everyone will have to go; it is now deadly perilous "
 "here, and the open ocean west of Tirigaz can be dangerous for small groups."
 msgstr ""
-"北の海岸に沿って進みます。そして、Bilheld 島の西に向かいます。Tirigaz の西南"
-"西の海にある Bilheld の西の小島に Tyegëa は住んでいます。皆で行かねばならない"
-"でしょう。今、この地は致命的に危険です。また Tirigaz の西にひらけた海は少人数"
-"では危険な場合もあります。"
+"北の海岸に沿って進みます。そして、Bilheld 島の西に向かいます。Tyegëa は "
+"Tirigaz の西南西の海にある Bilheld の西の小島に住んでいます。今、この地は致命"
+"的に危険なので、皆で向かいましょう。Tirigaz の西にひらけた海は少人数では危険"
+"でもありますし。"
 
 #. [message]: speaker=Gwabbo
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:358
@@ -566,8 +571,8 @@ msgid ""
 "I am not afraid! My people will see me fight the undead before we leave, "
 "even if defeating them all is impossible."
 msgstr ""
-"私は恐れているわけではない！たとえ打ち破ることが不可能だったとしても、この地"
-"を離れる前にアンデッドと私が戦うことを我が民に見せてやろう。"
+"私は恐れているわけではない！この地を離れる前に、たとえ打ち破ることが不可能"
+"だったとしてもアンデッドと私が戦えることを我が民に見せてやろう。"
 
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:377
@@ -584,8 +589,8 @@ msgid ""
 "They will follow. You proved your courage in our last battle. Your father, "
 "the Kai-that-was, would have been proud."
 msgstr ""
-"彼らは従うでしょう。貴方は先の戦いでその勇気を証明した。貴方の父、先王はその"
-"ことを誇りに思っていることでしょう。"
+"彼らは従うはずです。貴方は先の戦いでその勇気を証明したのですから。貴方の父、"
+"先王はそのことを誇りに思っていることでしょう。"
 
 #. [message]: speaker=Cylanna
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:392
@@ -703,7 +708,7 @@ msgstr "オオカミ海岸"
 #: data/campaigns/Dead_Water/scenarios/03_Wolf_Coast.cfg:20
 msgid "Distrustful of the open ocean, Kai Krellis led his people up the coast."
 msgstr ""
-"ひらけた海洋に不信感を抱きながらも、Kai Krellis は彼の民を海岸に導きました。"
+"ひらけた海洋に不安を抱きながらも、Kai Krellis は彼の民を海岸に導きました。"
 
 #. [part]
 #: data/campaigns/Dead_Water/scenarios/03_Wolf_Coast.cfg:24
@@ -714,11 +719,11 @@ msgid ""
 "to bother the merfolk, but these goblins were bandits and outcasts even to "
 "their own kind."
 msgstr ""
-"戦の匂いをかぎつけてきたオオカミに遭遇したとき、彼らはちょうど長い旅をはじめ"
-"ようとしたところでした。多くのオオカミの背にはゴブリンが乗っていました。Kai "
-"Laudiss の勝利のために罰せられた Tirigaz のオークはマーフォークに手を出さない"
-"と決めたのかも知れませんが、ゴブリンたちは自身の種族と同様に山賊や浮浪者と"
-"なっていました。"
+"長い旅をはじめようとしたそのとき、戦の匂いをかぎつけてきたオオカミに遭遇しま"
+"した。多くのオオカミの背にはゴブリンが乗っていました。Kai Laudiss による先の"
+"戦いで痛手を受けた Tirigaz のオークはマーフォークに手を出さないことにしたかも"
+"知れませんが、ゴブリンたちは自身の種族にありがちな山賊として暮らしていたので"
+"す。"
 
 #. [side]: id=Gashnok, type=Goblin Knight, type=Goblin Knight, type=Direwolf Rider, type=Direwolf Rider
 #: data/campaigns/Dead_Water/scenarios/03_Wolf_Coast.cfg:86
@@ -780,23 +785,25 @@ msgid ""
 "I know what that is. It’s a storm trident. It is supposed to let you control "
 "the lightning."
 msgstr ""
-"私はそれが何か知っています。それはストームトライデントです。それを手にした者"
-"は稲妻を操ることができるのです。"
+"知っているわ。それはストームトライデント。手にした者は稲妻を操ることができる"
+"のです。"
 
 #. [message]: speaker=narrator
 #: data/campaigns/Dead_Water/scenarios/03_Wolf_Coast.cfg:287
 msgid "The trident is 14-2, magical, ranged, with <i>fire</i> damage."
-msgstr "このトライデントの攻撃範囲は投射です。<i>火炎型</i>の魔法ダメージ 14-2 を与えます。"
+msgstr ""
+"このトライデントの攻撃範囲は投射です。<i>火炎型</i>の魔法ダメージ 14-2 を与え"
+"ます。"
 
 #. [option]: speaker=$unit.id
 #: data/campaigns/Dead_Water/scenarios/03_Wolf_Coast.cfg:294
 msgid "That sounds great! I’ll take it."
-msgstr ""
+msgstr "すばらしい！手にいれたぞ。"
 
 #. [option]: speaker=$unit.id
 #: data/campaigns/Dead_Water/scenarios/03_Wolf_Coast.cfg:303
 msgid "That sounds frightening. Let someone else have it."
-msgstr ""
+msgstr "なんだか恐ろしい。他の誰かにもたせてください。"
 
 #. [option]: speaker=$unit.id
 #: data/campaigns/Dead_Water/scenarios/03_Wolf_Coast.cfg:341
@@ -819,9 +826,9 @@ msgid ""
 "Now, they were farther away from home than most merfolk ever went. Only "
 "Cylanna and a few soldiers had been farther."
 msgstr ""
-"今、彼らはマーフォークの歴史の中でも最も住み処より離れたところに到着しまし"
-"た。今まで、ここまで遠くに辿り着いたのは Cylanna と数人の兵士のみだったので"
-"す。"
+"今、一行はマーフォークの歴史の中でも最も住み処より離れたところまできていまし"
+"た。今までは、こんなに遠くにまで辿り着いたのは Cylanna と数人の兵士のみだった"
+"のです。"
 
 #. [side]
 #: data/campaigns/Dead_Water/scenarios/04_Slavers.cfg:105
@@ -848,7 +855,7 @@ msgstr "Raxisz"
 #. [side]: id=Aglizix, type=Saurian Ambusher, type=Saurian Flanker, type=Saurian Flanker, type=Saurian Flanker
 #: data/campaigns/Dead_Water/scenarios/04_Slavers.cfg:233
 msgid "Saurians"
-msgstr ""
+msgstr "トカゲ族"
 
 #. [side]: id=Aglizix, type=Saurian Ambusher, type=Saurian Flanker, type=Saurian Flanker, type=Saurian Flanker
 #: data/campaigns/Dead_Water/scenarios/04_Slavers.cfg:238
@@ -896,7 +903,7 @@ msgstr "奴隷だと！"
 msgid ""
 "You! Merman! You have some property of oursss. Return it at once if you "
 "value your life."
-msgstr "貴様！マーマン！貴様は俺たちの所有物だ。命が惜しくばすぐに戻れ。"
+msgstr "マーマンめ！貴様は俺たちの所有物だ。命が惜しくばすぐに戻れ。"
 
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/04_Slavers.cfg:388
@@ -919,7 +926,9 @@ msgstr "勇敢で慈悲のある決断ですね！私は奴隷制を認めない
 msgid ""
 "Those were the words of a merman, Kai Krellis, and well spoken. The folk are "
 "truly yours now."
-msgstr "これが Kai Krellis というマーマンの素晴らしい言葉だ。民はあなたに心酔するだろう。"
+msgstr ""
+"これが Kai Krellis というマーマンの素晴らしい言葉だ。民はあなたに心酔するだろ"
+"う。"
 
 #. [message]: speaker=narrator
 #: data/campaigns/Dead_Water/scenarios/04_Slavers.cfg:405
@@ -928,8 +937,9 @@ msgid ""
 "from fleeing their enemies, cheered his ultimatum and made ready to fight "
 "with a will."
 msgstr ""
-"Kai Krellis は感じました。敵から逃げたことでプライドが傷ついたマーフォークの"
-"難民たちは彼の最後通牒を支持し、意志をもって戦う準備をはじめました。"
+"先の戦いで敵から逃げたことでプライドが傷ついたマーフォークの難民たちが Kai "
+"Krellis のこの宣言を支持し、この戦いのために心の準備をしたことを Kai Krellis "
+"は感じとりました。"
 
 #. [message]: speaker=Gilak
 #: data/campaigns/Dead_Water/scenarios/04_Slavers.cfg:411
@@ -1991,7 +2001,7 @@ msgstr ""
 #. [scenario]: id=10_The_Flaming_Sword
 #: data/campaigns/Dead_Water/scenarios/10_The_Flaming_Sword.cfg:14
 msgid "The Flaming Sword"
-msgstr ""
+msgstr "炎の剣"
 
 #. [part]
 #: data/campaigns/Dead_Water/scenarios/10_The_Flaming_Sword.cfg:22
@@ -2263,7 +2273,7 @@ msgstr ""
 #. [message]: speaker=narrator
 #: data/campaigns/Dead_Water/scenarios/10_The_Flaming_Sword.cfg:978
 msgid "This sword is 8-4, magical, with <i>fire</i> damage."
-msgstr "このトライデントの攻撃範囲は投射です。<i>火炎型</i>の魔法ダメージ 14-2 を与えます。"
+msgstr "この剣は<i>火炎型</i>の魔法ダメージ 8-4 を与えます。"
 
 #. [option]: speaker=unit
 #: data/campaigns/Dead_Water/scenarios/10_The_Flaming_Sword.cfg:985
