--- a/ja-po/wesnoth-units/ja.po
+++ b/ja-po/wesnoth-units/ja.po
@@ -13,7 +13,7 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.8.4+svn\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-10-19 12:51+0200\n"
-"PO-Revision-Date: 2010-10-20 18:00+0900\n"
+"PO-Revision-Date: 2010-10-20 18:47+0900\n"
 "Last-Translator: IWAI, Masaharu <iwaim.sub@gmail.com>\n"
 "Language-Team: Japanese Translation Team\n"
 "MIME-Version: 1.0\n"
@@ -1131,9 +1131,10 @@ msgid ""
 "quiet strengths of the elves."
 msgstr ""
 "エルフは他の多くの種族と違って、戦いの経験のある同輩をすぐに認めて、従いま"
-"す。これは、統率力がしばしば威圧と威嚇についての問題である人間とは大きく異な"
-"ります。そのリーダーの知恵を進んで受け入れる意思と、実力あるリーダーを選ぶ傾"
-"向の組み合わせこそエルフの静かなる力の一つです。"
+"す。これは、統率力がしばしば威圧と威嚇がもたらす、不安定なまがい物で成り立っ"
+"ている人間族にとってはたいへん奇妙に感じます。そのリーダーの知恵を進んで受け"
+"入れる意思と、実力あるリーダーを選ぶ傾向の組み合わせこそエルフの静かなる力の"
+"一つです。"
 
 #. [unit_type]: id=Elvish Champion, race=elf
 #: data/core/units/elves/Champion.cfg:4
@@ -1149,10 +1150,10 @@ msgid ""
 "to which few can compare. Even their archery, treated as a secondary "
 "pursuit, is masterfully executed."
 msgstr ""
-"彼ら自身を戦争の武器として慎重に磨き上げてきたこの数少ないエルフは、彼らの種"
-"族の平和好きな評判を裏切るものであります。献身と技能は形式の純正さに見合い、"
-"結果としてわずかなものしか匹敵できない剣術の達人となります。彼らの弓術さえ"
-"も、二次的な追求として扱われますが、名人芸でもって実行されます。"
+"彼ら自身を戦争の武器として慎重に磨き上げてきたこの数少ないエルフは、平和主義"
+"として知られているエルフ族の評判を裏切るものであります。その献身と技能は形式"
+"の純正さに見合い、結果としてわずかなものしか匹敵できない剣術の達人となりま"
+"す。剣術ほど重視して鍛えていない弓術でさえも、達人並みに習得しています。"
 
 #. [unit_type]: id=Elvish Druid, race=elf
 #: data/core/units/elves/Druid.cfg:4
@@ -1270,10 +1271,10 @@ msgid ""
 "of combat. Those who are honored as heroes are strong with both sword and "
 "bow, and their skill once acquired does not fade for lack of practice."
 msgstr ""
-"エルフは生来好戦的ではありませんが、速やかに学習します。比較的少ない経験で、"
-"エルフは有能な戦士から戦闘の達人になることができます。英雄として尊敬されるこ"
-"の者達は剣でも弓でも強く、一度得られた彼らの技能は練習不足でも決してなくなり"
-"ません。"
+"エルフ族は生来好戦的ではありません。しかし、その学習能力には目を見張るものが"
+"あります。エルフ族は比較的少ない経験で、有能な戦士から戦闘の達人になることが"
+"できます。英雄として尊敬されるこの者達は剣でも弓でも強く、一度得られた彼らの"
+"技能は鍛錬が不足しているときでさえも失われることはありません。"
 
 #. [unit_type]: id=Elvish High Lord, race=elf
 #: data/core/units/elves/High_Lord.cfg:4
@@ -1373,11 +1374,12 @@ msgid ""
 "elf sets his mind to war, the strategy that results is often the work of a "
 "master."
 msgstr ""
-"エルフの長寿と生まれながらの知性によって、彼らは軍事に適しました。それは彼ら"
-"が戦争に対し一般的に持つ嫌悪に逆らうのに十分だったのです。エルフは人間よりも"
-"ずっとはっきりと物事を憶えていて、他の者達にどのような訓練を行えばよいかをし"
-"ばしば直感で知ることができます。まさに、エルフが戦争に心を向けるという滅多に"
-"ない機会において生まれる戦略は、巨匠の作品となります。"
+"長寿と生まれながらの知性をもつエルフは、軍隊にありがちな慣習を持っていませ"
+"ん。エルフ族は一般的にそういったものに嫌悪感を持つからです。エルフは人間より"
+"もずっとはっきりと物事を記憶しており、また、他の者達にどのような訓練を行えば"
+"よいかをしばしば直感で知ることができます。エルフが戦争に心を向けるという稀有"
+"な機会において生み出される戦略は、時折、偉大な芸術家の作品のようにも感じられ"
+"ます。"
 
 #. [unit_type]: id=Elvish Outrider, race=elf
 #: data/core/units/elves/Outrider.cfg:4
@@ -1612,15 +1614,16 @@ msgid ""
 "the orcish assassins, making a swipe from these beasts’ paws into a most "
 "deadly stroke."
 msgstr ""
-"「ダイアウルフ」は、普通の種類とは大きさと色が異なるだけです。それは通常馬の"
-"肩よりも高く立ち上がり、それに見合う食欲があります。そのようなものに出くわし"
-"たいと望むのは狂人だけでしょう。しかしゴブリンは多大な労力をかけて、なんとか"
-"これを手なづけて乗ってきたのです。\n"
+"「ダイアウルフ」と普通の種類の狼との違いは大きさと色だけです。通常サイズで"
+"は、その高さは馬の肩よりも大きくなり、その大きさに見合っただけの食欲もありま"
+"す。正常な判断力を持っていれば、このような生き物に出くわしたいと望むものはい"
+"ないでしょう。しかしながら、ゴブリンの中には大変な労力をかけてダイアウルフを"
+"飼いならし、その背中に乗ることができるものもいるのです。\n"
 "\n"
-"狼のかぎ爪は一般的には最も危険な部分としては見なされませんが、この巨大な獣の"
-"それは鉄釘よりも太く長いのです。その乗り手は前面に毒を塗りつけるので、オーク"
-"の暗殺者によって使われていたようなものとは違い、この獣の足で打たれることはほ"
-"ぼ死にいたる一撃となります。"
+"狼のかぎ爪は一般的には最も危険な部分としては見なされてはいませんが、実際には"
+"大きいもので、鉄釘よりも太く長いのです。ダイアウルフライダーはその前足に毒を"
+"塗りつけています。このことにより、オークの暗殺者による毒の攻撃とは違って、死"
+"にも至るほどの一撃を繰り出します。"
 
 #. [unit_type]: id=Goblin Impaler, race=goblin
 #: data/core/units/goblins/Impaler.cfg:4
@@ -1655,13 +1658,13 @@ msgid ""
 "The wolves they are given are bred for speed and strength, making them quite "
 "dangerous in combat."
 msgstr ""
-"ゴブリンの「騎士」というのは同じ称号をもつ人間とはほとんど共通点がなく、その"
-"称号は彼らの敵の口調の中でのみ使われるものです。類似点は単に彼らが狼乗りの精"
-"鋭であるということで、おそらくは、何か向こうみずな襲撃での成功によってその地"
-"位に昇進しています。\n"
+"ゴブリンの「騎士」というのは人間族での同様に呼ばれる称号とはほとんど共通点は"
+"ありません。彼らの敵からそう呼ばれているだけなのです。類似点は、単に彼らが"
+"「ウルフライダー」のエリートであるという点だけです。おそらくは、何か向こうみ"
+"ずな襲撃で成功したという理由でその地位を獲得したのでしょう。\n"
 "\n"
-"彼らに与えられる狼は速度と力のために改良されているので、彼らは戦闘において極"
-"めて危険なものとなります。"
+"彼等が与えられる狼は速度と力の面で優秀なものであるため、戦闘においては極めて"
+"危険なものとなります。"
 
 #. [unit_type]: id=Goblin Pillager, race=wolf
 #: data/core/units/goblins/Pillager.cfg:4
@@ -1676,9 +1679,9 @@ msgid ""
 "their foes, and also carry nets to wreak havoc against those attempting to "
 "rally for defense or reprisal."
 msgstr ""
-"あるゴブリンは彼らの狼を炎の恐れに打ち勝つよう訓練します。襲撃において、これ"
-"らのゴブリンは補助的な役割を果たします。彼らは敵の家々や作物に放火し、また網"
-"を引いて防御や報復に向かおうとする試みを台無しにします。"
+"ゴブリンの中には、狼を炎の恐れに打ち勝つよう訓練します。襲撃において、これら"
+"のゴブリンは驚くべき役割を果たします。彼等は、敵の家々や作物に放火したり、網"
+"を投げて防御や反撃を困難にしたりするのです。"
 
 #. [attack]: type=fire
 #: data/core/units/goblins/Pillager.cfg:56
@@ -1758,15 +1761,16 @@ msgid ""
 "mounts have a rather easy time traversing the mountains, though water and "
 "woods will still slow them down."
 msgstr ""
-"狼を飼い馴らし、乗るという習慣がどのように生まれてきたかは誰も確証がありませ"
-"ん。しかしゴブリンにとっての利点は明白です。ゴブリンは眷属のオークよりも小さ"
-"く、また弱いものです。そしてしばしば戦闘において最も危険で望まれない部分を任"
-"されます。乗ることができたものは、より安全であり、戦闘においてより面白い役割"
-"を果たすでしょう。\n"
+"狼を飼い馴らし、乗るという習慣がどのように生まれてきたかは誰も知りません。し"
+"かし、ゴブリンにとって狼に乗るということは多大なメリットがあります。ゴブリン"
+"は眷属であるオークと比べると小さく弱い生き物です。そのため、とても危険な任務"
+"や、戦ではあまり重要でない任務を押し付けられることもしばしばあります。一方で"
+"狼に乗ることができたゴブリンは、より安全になり、戦局に大きな影響を与えたり、"
+"戦においてより面白い役割を果たすこともできるでしょう。\n"
 "\n"
-"狼は、プレートアーマーを着た人間を支えることはできませんが、レザーアーマーを"
-"着たゴブリンを担ぐのは簡単です。馬とはまったく違って、狼は山を楽に横切ること"
-"ができますが、水や森は彼らの歩みを遅くするでしょう。"
+"狼はプレートアーマーを着た人間を支えることはできませんが、レザーアーマーを着"
+"たゴブリンを担ぐのは簡単です。馬とはまったく違って、狼は山を楽に横切ることが"
+"できます。しかし、水や森は彼らの歩みを遅くするでしょう。"
 
 #. [unit_type]: id=Gryphon, race=gryphon
 #: data/core/units/gryphons/Gryphon.cfg:4
@@ -1998,8 +2002,8 @@ msgid ""
 msgstr ""
 "精鋭竜騎士は馬上での剣とクロスボウの両方の使用法に熟練しています。彼らの打撃"
 "力と機動力の組み合わせは恐ろしいものです。その突進には定評があり、またそれに"
-"見合った積極性を持っています。精鋭竜騎士の勇敢な業績は、多くの物語や歌の主題"
-"となっています。"
+"見合った積極性を持っています。精鋭竜騎士の勇敢な業績は数多くの歌や物語として"
+"語り継がれています。"
 
 #. [attack]: type=pierce
 #. [attack]: type=fire
@@ -4502,13 +4506,13 @@ msgid ""
 "It is because of such things that necromancy is condemned with an almost "
 "primal hatred in all civilized lands."
 msgstr ""
-"最も邪悪で残虐な者だけが人間をグールに変えるために何がなされるべきかを知って"
-"おり、それは彼らが教えようとしない秘密です。しかしながら、その結果はあまりに"
-"もよく知られています。人間であった日のことは何も憶えていない獣であり、生まれ"
-"た時の裸のままよろよろ歩いて、死体を腹いっぱいに詰め込む物です。\n"
+"人間をグールに変貌させるための術は、最も邪悪で残忍な者だけが知っており、彼ら"
+"はその秘密を他者に漏らそうとはしません。しかしながら、その結果として生み出さ"
+"れるものは広く知られています。グールは人間であったときの記憶がまったくない獣"
+"です。裸のような生まれたままの姿でよろよろさまよい、死肉で腹を満たします。\n"
 "\n"
-"降霊術があらゆる文明化された土地でほぼ第一級の嫌悪により使用禁止になっている"
-"のは、そのような理由からです。"
+"文明化された土地すべてにおいて、最大の禁忌として使用禁止になっているのは、こ"
+"のような理由があるからです。"
 
 #. [unit_type]: id=Necrophage, race=undead
 #: data/core/units/undead/Corpse_Necrophage.cfg:4
